@@ -1,3 +1,11 @@
+2011-11-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCsymt.c,
+	  src/SDCCsymt.h,
+	  src/SDCC.y,
+	  src/SDCC.lex:
+	  Preparations for named address space support.
+
 2011-11-05 Borut Razem <borut.razem AT gmail.com>
 
 	* src/port.mk: fixed bug #3401455: Missing dependency
